Added resume.html page

--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,3 @@
-layout: page
-title: "RESUME"
-permalink: https://deejayrusso.github.io/resume
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -80,7 +76,7 @@ permalink: https://deejayrusso.github.io/resume
             <h3 style="line-height:.05; :bold">Sales & Marketing Analyst  <span style="font-weight:normal"> | DeMert Brands</span></h3>
             <h4>Achievements:</h4>
             <li>Saved company over $100K/yr by changing procurement of syndicated data. Removed consulting firm providing data analysis for routine needs and directly sourced and analyzed in-house.</li>
-            <li>Created an Excel allocation tool to evaluate shipment orders during COVID-19 supply chain strain. Tool used standardized formula and recent data to continually assess accountís ìfair shareî of product and guide executive team in allocation decisions, ensuring inventory reserves for high performing accounts.</li>
+            <li>Created an Excel allocation tool to evaluate shipment orders during COVID-19 supply chain strain. Tool used standardized formula and recent data to continually assess account‚Äôs ‚Äúfair share‚Äù of product and guide executive team in allocation decisions, ensuring inventory reserves for high performing accounts.</li>
             <li>Saved company over $100K/yr by changing procurement of syndicated data. Removed consulting firm providing data analysis for routine needs and directly sourced and analyzed in-house.</li>
             <li>Initiated and contributed to development of data literacy program.</li>
             <h4>Ongoing:</h4>
