--- a/resume.html
+++ b/resume.html
@@ -19,8 +19,8 @@
             <h3 style="text-align:center">CONTACT</h3>
             <p>Phone: 352-442-8830</p>
             <a style="font-size:large" href="mailto:dominick.russo19@gmail.com">Email</a>
-            <a style="font-size: large" href="linkedin.com/in/dominick-russo">LinkedIn</a>
-            <a style="font-size:large" href="github.com/deejayrusso">GitHub</a>
+            <a target="_blank" style="font-size: large" href="linkedin.com/in/dominick-russo">LinkedIn</a>
+            <a target="_blank" style="font-size:large" href="github.com/deejayrusso">GitHub</a>
             <h3 style="text-align:center">PROFILE</h3>
             <p style="font-size:medium; text-align: left">Aspiring Data Scientist interested in using analytics and  machine learning techniques to deliver key insights and contribute to improving business performance and revenue through problem solving and solution building</p>
             <h3 style="text-align:center">HIGHEST EDUCATION</h3>
